--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,6 @@ services:
     build: 
       context: ./client
       dockerfile: Dockerfile.dev
-    ports:
-      - 3000:3000
     volumes: 
       - /app/node_modules
       - ./client:/app
@@ -37,8 +35,6 @@ services:
     build:
       dockerfile: Dockerfile.dev
       context: ./server
-    ports:
-      - 3001:3001
     volumes: 
       - /app/node_modules
       - ./server:/app
@@ -65,6 +61,16 @@ services:
       GOOGLE_API_KEY: AIzaSyC8iaDOAP3SpcjlOts_3cnqL8BWi51yL3o
     depends_on:
       - mongo
+  nginx:
+    restart: always
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./nginx
+    ports:
+      - '80:80'
+    depends_on:
+      - api
+      - client
 volumes:
   mongodb_data:
     driver: local
