--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,2 +1,4 @@
 FROM nginx
 COPY default.conf /etc/nginx/conf.d/default.conf
+COPY nopass-example.key /etc/nginx/ssl/nopass-example.key
+COPY example.crt /etc/nginx/ssl/example.crt
