--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,29 +8,11 @@ upstream api {
 
 server {
     listen 80;
-
-    location /api {
-        rewrite /api/(.*) /$1 break;
-        proxy_pass http://api;
-    }
-
-    location /sockjs-node {
-        proxy_pass http://client;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-    }
-
-    location / {
-        proxy_pass http://client;
-    }
-}
-
-server {
     listen 443 ssl;
-
+    server_name localhost;
+    
     ssl_certificate /etc/nginx/ssl/example.crt;
-    ssl_certificate_key /etc/nginx/ssl/example.key;
+    ssl_certificate_key /etc/nginx/ssl/nopass-example.key;
 
     location /api {
         rewrite /api/(.*) /$1 break;
