--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,10 @@ services:
       - /app/node_modules
       - ./client:/app
     ports:
-      - '80:80'
+      - '3000:3000'
     environment: 
       REACT_APP_API_HOST: https://gentle-caverns-48044.herokuapp.com
+      PORT: 3000
     depends_on:
       - api
   api:
