--- a/line-app/package.json
+++ b/line-app/package.json
@@ -14,9 +14,12 @@
     "@line/bot-sdk": "^6.8.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dialogflow": "^0.14.1",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.7.11"
+    "mongoose": "^5.7.11",
+    "request-promise": "^4.2.5",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
